apps/hass/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hass
spec:
  ports:
    - port: 80
      targetPort: hass
  selector:
    app.kubernetes.io/name: hass
